--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <title>js</title>
   <link rel="stylesheet" href="/pizza.css">
 </head>
-
+<div class="test"></div>
 <body>
    <div class="container">
      <h1>Nima buyurtma qilamiz</h1>
-     
+
    </div>
   
   
