--- a/index.html
+++ b/index.html
@@ -10,10 +10,54 @@
 </head>
 <div class="test"></div>
 <body>
-   <div class="container">
-     <h1>Nima buyurtma qilamiz</h1>
+  <div class="container">
+    <h1>Nima buyurtma qilamiz</h1>
+    <form class="pizza-form" action="https://echo.htmlacademy.ru" method="post">
+      <div class="pizza-form__fields">
+        <div class="pizza-form__group">
+          <label for=""></label>
+          <select class="pizza-form__field" name="bread-type" id="bread-type-select">
+            <option value="yupqa">Yupqa</option>
+            <option value="qalin">Qalin</option>
+            <option value="buxanka">Buxanka</option>
+          </select>
+        </div>
+        
+        <div class="pizza-form__field">
+          <fieldset>
+            <legend>Kattaligi</legend>
+            <label class="radio">
+              <input class="radio-input visually-hidden" type="radio" name="size" value="25">
+              <span class="radio__control">25 cm</span>
+            </label>
+            <label class="radio">
+              <input class="radio-input visually-hidden" type="radio" name="size" value="30">
+              <span class="radio__control">30 cm</span>
+            </label>
+            <label class="radio">
+              <input class="radio-input visually-hidden" type="radio" name="size" value="35">
+              <span class="radio__control">35 cm</span>
+            </label>
+            <label class="radio">
+              <input class="radio-input visually-hidden" type="radio" name="size" value="40">
+              <span class="radio__control">40 cm</span>
+            </label>
+          </fieldset>
+        </div>
 
-   </div>
+        <div class="pizza-form__group">
+          <fieldset>
+            <legend>Ustiga nima solaylik</legend>
+            <label class="checkbox" for="">
+              <input class="checkbox-input visually-hidden" type="checkbox" name="pomidor">
+              <span class="checkbox-control">Pomidor</span>
+            </label>
+          </fieldset>
+        </div>
+        
+      </div>
+    </form>
+  </div>
   
   
   <script src="/pizza.js"></script>
