--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="pizza-form__group">
           <fieldset>
             <legend>Ustiga nima solaylik</legend>
-            <label class="checkbox" for="">
+            <label class="checkbox">
               <input class="checkbox-input visually-hidden" type="checkbox" name="pomidor">
               <span class="checkbox-control">Pomidor</span>
             </label>
