--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <template class="pizza-size-radio-template">
     <label class="radio">
       <input class="radio-input visually-hidden" type="radio" name="size" value="">
-      <span class="radio__control"> cm</span>
+      <span class="radio__control"></span>
     </label>
   </template>
   
