--- a/index.html
+++ b/index.html
@@ -23,25 +23,8 @@
         </div>
         
         <div class="pizza-form__field">
-          <fieldset>
+          <fieldset class="pizza-zform__sie">
             <legend>Kattaligi</legend>
-            <label class="radio">
-              <input class="radio-input visually-hidden" type="radio" name="size" value="25">
-              <span class="radio__control">25 cm</span>
-            </label>
-            <label class="radio">
-              <input class="radio-input visually-hidden" type="radio" name="size" value="30">
-              <span class="radio__control">30 cm</span>
-            </label>
-            <label class="radio">
-              <input class="radio-input visually-hidden" type="radio" name="size" value="35">
-              <span class="radio__control">35 cm</span>
-            </label>
-            <label class="radio">
-              <input class="radio-input visually-hidden" type="radio" name="size" value="40">
-              <span class="radio__control">40 cm</span>
-            </label>
-          </fieldset>
         </div>
         
         <div class="pizza-form__group">
