--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         
         <div class="pizza-form__field">
-          <fieldset class="pizza-zform__sie">
+          <fieldset class="pizza-form__size">
             <legend>Kattaligi</legend>
         </div>
         
